--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ h2 {
         margin: 30px 20px;
         border-radius: 20px;
         border: thin solid lightgrey;
-        padding: 5px;
+        padding: 5px 15px;
 
         p{
             text-align: justify;
